Remove unnecessary lock that causes reentry.

The StatisticsRecorder is acquiring a lock before
calling Import but the import calls back to the SR
which again tries to acquire the lock... and crashes.

The lock isn't necessary with the new persistent
iterator (which is lock-free) so move the Import
call outside of the locking.

BUG=601457

Review URL: https://codereview.chromium.org/1872713002

Cr-Commit-Position: refs/heads/master@{#386102}

Former-commit-id: 2f153f83f1d6fcfb4b0b8dae5a6b12dbc6544d6b